this shir works type city

--- a/NerfWLighting.ipynb
+++ b/NerfWLighting.ipynb
@@ -37,8 +37,8 @@
     "    \"--exp_name\",      \"my_experiment\",              # subfolder under root_dir for this run\n",
     "\n",
     "    # ——— Data loading ———\n",
-    "    \"--data_root_dir\", \"./data/Cambridge\",           # top‑level data folder\n",
-    "    \"--scene\",         \"KingsCollege\",               # which scene subfolder to use\n",
+    "    \"--data_root_dir\", \"./data/\",           # top‑level data folder\n",
+    "    \"--scene\",         \"NotreDame\",               # which scene subfolder to use\n",
     "    \"--img_downscale\", \"3\",                          # downsample factor for images\n",
     "\n",
     "    # ——— Batch & sampling ———\n",
@@ -280,8 +280,12 @@
     "        # loss = model.get_loss(outputs, target)\n",
     "        # Pass the rays directly to the model\n",
     "\n",
-    "        rays_input = rays[..., :9]  # First 9 dimensions [position, direction, near, far, id]\n",
-    "        target = rays[..., 9:12]    # Last 3 dimensions [RGB]\n",
+    "        # rays_input = rays[..., :9]  # First 9 dimensions [position, direction, near, far, id]\n",
+    "        # target = rays[..., 9:12]    # Last 3 dimensions [RGB]\n",
+    "        # lighting = rays[..., 12:19] #lighting\n",
+    "        # rays_input = torch.cat([rays_input, lighting], dim=-1)\n",
+    "        rays_input = torch.cat([rays[..., :9], rays[..., 12:19]], dim=-1)  # Position, Direction, Near, Far, ID, Lighting\n",
+    "        target = rays[..., 9:12]  # RGB\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "\n",
